# aidump

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs
